# axis-research

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  WHY_AXIS.md  bridges.md  function-registry.md  governance.md  semantic-core.md
articles/: 03-designing-with-ai.md  06-universal-semantic-layer.md  README.md
axis_core_rs/: Cargo.toml
axis_core_rs/src/: ast.rs  env.rs  eval.rs  example.rs  lib.rs  main.rs  parallel.rs  value.rs
docs/: axis-language-core-architecture-0.1.md
docs/articles/: 01-provable-software.md  02-machine-provable-core.md  04-parallelism-no-data-races.md  05-bridging-to-ecosystems.md
docs/internal/: axis-core-roadmap.md
docs/notes/: minimum-spec-notes.md
docs/notes/archive/: paper2_axis_language_spec_placeholder.md  paper4_cross-language_bridging_architecture_placeholder.md  paper5_axis_web_semantics_placeholder.md  paper6_axis_os_and_infrastructure_semantics_placeholder.md
language-optimisation-research/: 02-axis-ultra.md  03-research-plan.md  04-altra-vs-core.md
papers/: paper1_axis_semantic_substrate.md  paper3_immutable_contract_registry_placeholder.md  paper7_axis_db_semantics_placeholder.md  paper8_axis_as_an_ai_reasoning_substrate_placeholder.md
papers/archive/: Axis-whitepaper.md
papers/templates/: axis-template.tex
spec/: axis-language-0.4.1.md  axis-language-core-0.5.md  axis-language-surface-0.5.md
spec/archive/: axis-language-0.4.1.md
